#12 Update Rich text editor to no longer overflow container and to keep drag handle in the correct place in case of scrolling

--- a/wixs-tester/src/Components/Editor/Components/richTextbox/RichTextbox.scss
+++ b/wixs-tester/src/Components/Editor/Components/richTextbox/RichTextbox.scss
@@ -1,7 +1,4 @@
 .richtextbox-component-styles{
   overflow: auto;
-}
-
-.draft-editor{
-  height: 99%;
+  max-height: 100%;
 }
